# coop

./: Cargo.toml  README.md  coop.toml  install.sh
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  cli.md  configuration.md  getting-started.md  troubleshooting.md
docs/rfc/: 00-abstract.md  01-introduction.md  02-terminology.md  03-architecture.md  04-coopfile.md  05-sandbox.md  06-daemon.md  07-ipc.md  08-pty.md  09-web-ui.md  10-tunnel.md  11-cli.md  12-security.md  13-references.md  README.md
src/: main.rs
src/cli/: mod.rs
src/config/: coopfile.rs  mod.rs  paths.rs
src/daemon/: client.rs  logs.rs  mod.rs  server.rs  session.rs  spawn.rs
src/ipc/: codec.rs  messages.rs  mod.rs
src/pty/: filter.rs  manager.rs  mod.rs
src/sandbox/: init.rs  mod.rs  namespace.rs
src/tunnel/: mod.rs  signaling.rs
src/web/: api.rs  assets.rs  mod.rs  server.rs  websocket.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx  routeTree.gen.ts
web/src/components/: app-layout.tsx  pty-tabs.tsx  session-sidebar.tsx  terminal.tsx
web/src/hooks/: use-layout.ts
web/src/lib/: auth.ts
web/src/routes/: __root.tsx  connect.tsx  index.tsx
web/src/transport/: http-transport.ts  index.ts  transport.ts  webrtc-transport.ts
