[package]
name = "opencoop"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
description = "Sandboxed AI agent sessions with remote access"
license = "MIT"
repository = "https://github.com/vibesrc/coop"

[[bin]]
name = "coop"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Web server
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# WebSocket
tokio-tungstenite = "0.26"

# Embedded assets
rust-embed = { version = "8", features = ["axum"] }

# System / Linux
nix = { version = "0.29", features = ["user", "mount", "sched", "signal", "process", "term", "hostname", "fs"] }
procfs = "0.17"
fork = "0.2"

# WebRTC
# str0m = "0.6"  # TODO: enable when implementing tunnel

# Input filtering
aho-corasick = "1"

# QR codes
qrcode = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Self-update
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }

# Misc
anyhow = "1"
thiserror = "2"
bytes = "1"
rand = "0.9"
base64 = "0.22"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.31"
mime_guess = "2.0.5"
shellexpand = "3.1.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
